--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -759,7 +759,7 @@
                         </div>
                         <!-- Competency chart -->
                         <div class="chart">
-                            <b class="chakra-petch-regular" style="font-size: 30px;">Competency</b>  
+                            <h4 class="chakra-petch-regular">Competency</h4>   
                             <div>
                                 <div class="chartCard">
                                     <div class="chartBox" style="background-color: #ffffff37; border: solid #fff;">
