--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -35,7 +35,7 @@
         color: #2a2a2a;
         width: 40px;
         text-align: center;
-        background-color: #ffffff;
+        background-color: #a0de87;
         border-radius: 5px;
         border: solid;
         margin-right: 5px;
@@ -101,17 +101,17 @@
                                         <% if(pre1done >= 1 ){ %>
                                             <a class="a1"  href="/course-Algorithms_and_Flowcharts">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre1LV1 >= 4 ){ %>
+                                            <% if(pre1LV1 >= 3 ){ %>
                                                 <a href="/course-Algorithms_and_Flowcharts#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Algorithms_and_Flowcharts#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre1LV2 >= 4 ){ %>
+                                            <% if(pre1LV2 >= 3 ){ %>
                                                 <a href="/course-Algorithms_and_Flowcharts#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Algorithms_and_Flowcharts#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre1LV3 >= 4 ){ %>
+                                            <% if(pre1LV3 >= 3 ){ %>
                                                 <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -205,17 +205,17 @@
                                         <% if(pre2done >= 1 ){ %>
                                             <a class="a1" href="/course-Datatype_and_Variable">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre2LV1 >= 4 ){ %>
+                                            <% if(pre2LV1 >= 3 ){ %>
                                                 <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre2LV2 >= 4 ){ %>
+                                            <% if(pre2LV2 >= 3 ){ %>
                                                 <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre2LV3 >= 4 ){ %>
+                                            <% if(pre2LV3 >= 3 ){ %>
                                                 <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -298,17 +298,17 @@
                                         <% if(pre3done >= 1 ){ %>
                                             <a class="a1"  href="/course-Input_and_Output">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre3LV1 >= 4 ){ %>
+                                            <% if(pre3LV1 >= 3 ){ %>
                                                 <a href="/course-Input_and_Output#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Input_and_Output#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre3LV2 >= 4 ){ %>
+                                            <% if(pre3LV2 >= 3 ){ %>
                                                 <a href="/course-Input_and_Output#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Input_and_Output#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre3LV3 >= 4 ){ %>
+                                            <% if(pre3LV3 >= 3 ){ %>
                                                 <a href="/course-Input_and_Output#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Input_and_Output#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -391,17 +391,17 @@
                                         <% if(pre4done >= 1 ){ %>
                                             <a class="a1"  href="/course-Operators_and_Expressions">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre4LV1 >= 4 ){ %>
+                                            <% if(pre4LV1 >= 3 ){ %>
                                                 <a href="/course-Operators_and_Expressions#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Operators_and_Expressions#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre4LV2 >= 4 ){ %>
+                                            <% if(pre4LV2 >= 3 ){ %>
                                                 <a href="/course-Operators_and_Expressions#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Operators_and_Expressions#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre4LV3 >= 4 ){ %>
+                                            <% if(pre4LV3 >= 3 ){ %>
                                                 <a href="/course-Operators_and_Expressions#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Operators_and_Expressions#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -485,17 +485,17 @@
                                         <% if(pre5done >= 1 ){ %>
                                             <a class="a1"  href="/course-Selection_Statements">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre5LV1 >= 4 ){ %>
+                                            <% if(pre5LV1 >= 3 ){ %>
                                                 <a href="/course-Selection_Statements#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Selection_Statements#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre5LV2 >= 4 ){ %>
+                                            <% if(pre5LV2 >= 3 ){ %>
                                                 <a href="/course-Selection_Statements#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Selection_Statements#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre5LV3 >= 4 ){ %>
+                                            <% if(pre5LV3 >= 3 ){ %>
                                                 <a href="/course-Selection_Statements#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Selection_Statements#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -578,17 +578,17 @@
                                         <% if(pre6done >= 1 ){ %>
                                             <a class="a1"  href="/course-Loop_Statements">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre6LV1 >= 4 ){ %>
+                                            <% if(pre6LV1 >= 3 ){ %>
                                                 <a href="/course-Loop_Statements#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Loop_Statements#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre6LV2 >= 4 ){ %>
+                                            <% if(pre6LV2 >= 3 ){ %>
                                                 <a href="/course-Loop_Statements#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Loop_Statements#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre6LV3 >= 4 ){ %>
+                                            <% if(pre6LV3 >= 3 ){ %>
                                                 <a href="/course-Loop_Statements#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Loop_Statements#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -671,17 +671,17 @@
                                         <% if(pre7done >= 1 ){ %>
                                             <a class="a1"  href="/course-Arrays_and_Strings">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre7LV1 >= 4 ){ %>
+                                            <% if(pre7LV1 >= 3 ){ %>
                                                 <a href="/course-Arrays_and_Strings#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Arrays_and_Strings#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre7LV2 >= 4 ){ %>
+                                            <% if(pre7LV2 >= 3 ){ %>
                                                 <a href="/course-Arrays_and_Strings#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Arrays_and_Strings#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre7LV3 >= 4 ){ %>
+                                            <% if(pre7LV3 >= 3 ){ %>
                                                 <a href="/course-Arrays_and_Strings#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Arrays_and_Strings#Explaining" class="scrollbtnRed"  type="button">E</a>
@@ -765,17 +765,17 @@
                                         <% if(pre8done >= 1 ){ %>
                                             <a class="a1"  href="/course-Functions">เนื้อหาปลดล็อคแล้ว <br>กดเข้าไปดูได้เลย!</a><br>
                                             <br><p>ทางลัดไปยังแบบฝึกหัด</p>
-                                            <% if(pre8LV1 >= 4 ){ %>
+                                            <% if(pre8LV1 >= 3 ){ %>
                                                 <a href="/course-Functions#Knowledge" class="scrollbtn"  type="button">K</a>
                                             <% } else{ %> 
                                                 <a href="/course-Functions#Knowledge" class="scrollbtnRed"  type="button">K</a>
                                             <% } %>
-                                            <% if(pre8LV2 >= 4 ){ %>
+                                            <% if(pre8LV2 >= 3 ){ %>
                                                 <a href="/course-Functions#Tracing" class="scrollbtn"  type="button">T</a>
                                             <% } else{ %> 
                                                 <a href="/course-Functions#Tracing" class="scrollbtnRed"  type="button">T</a>
                                             <% } %>
-                                            <% if(pre8LV3 >= 4 ){ %>
+                                            <% if(pre8LV3 >= 3 ){ %>
                                                 <a href="/course-Functions#Explaining" class="scrollbtn"  type="button">E</a>
                                             <% } else{ %> 
                                                 <a href="/course-Functions#Explaining" class="scrollbtnRed"  type="button">E</a>
