--- a/views/student/project/3_ProjectQUIZ3.ejs
+++ b/views/student/project/3_ProjectQUIZ3.ejs
@@ -15,33 +15,48 @@
             -moz-user-select: none;
             user-select: none;
         }
-
-        .group2 {
+        .grid2 {
             display: grid;
             grid-template-columns: 50% 50%;
-            padding: 10px;
+            padding-top: 10px;
         }
         a.DrawIo {
             color: black;
             text-decoration: none;
             background-color: #d27700;
-            padding-top: 15px;
+            padding: 15px;
             height: 60px;
-            width: 600px;
+            width: 300px;
             text-align: center;
         }
- 
+        a.compiler {
+            color: black;
+            text-decoration: none;
+            background-color: #ffffff;
+            padding: 15px;
+            height: 60px;
+            width: 300px;
+            text-align: center;
+        }
+        .PJQbox{
+            display: flex;
+        }
+        @media (max-width: 1500px) {
+            .grid2 {display: block;}
+            
+        }
         @media (min-width: 768px) {
             .bd-placeholder-img-lg {
                 font-size: 3.5rem;
             }
         }
+        
     </style>
 
     <link rel='stylesheet' href='stylesheets/home.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <title>Project QUIZ #3</title>
+    <title> Stock Management System</title>
 </head>
 
 <body>
@@ -53,7 +68,7 @@
     <div id = "content" class="container">
 <form action="/project-Project_QUIZ3/submit" method="post" autocomplete="off" > 
        <%# LV4 %>                
-       <h2>Project QUIZ #3</h2> 
+       <h2> Stock Management System</h2> 
        <p>ให้ซื่อสัตย์ในการทำข้อสอบ
         Project QUIZ #3 ในวิชา CE213 2/2566 <br>
         เอกสารประกอบการเรียน <a href="https://bit.ly/ce2132024" target="_blank">https://bit.ly/ce2132024</a>  <br>
@@ -62,11 +77,13 @@
     </p>
 
     
-    <div class="group2" style="background-color: #212121;">
+    <div class="grid2" style="background-color: #212121;">
         <iframe src="<%= ADRI  %> " width="600px" height="800" allow="autoplay"></iframe>
         <div>
-            <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
-
+            <div style="display: flex;">
+                <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
+                <a class="compiler btn" href=https://www.programiz.com/c-programming/online-compiler/" target="_blank">Click to go to Draw.io</a>
+            </div>
             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="600px" height="740px"></iframe> 
         </div>
         
