--- a/views/teacher/layouts/navbar.ejs
+++ b/views/teacher/layouts/navbar.ejs
@@ -51,7 +51,7 @@
           <% if (user.role === 'Teacher') { %>
             <ul class="nav navbar-nav hidden-xs">
               <li class="nav-item "><a class="nav-link" href="/">Home</a></li>
-              <li class="nav-item "><a class="nav-link" href="/class">Class </a></li>
+              <li class="nav-item "><a class="nav-link" href="/class">Status </a></li>
               <li class="nav-item "><a class="nav-link" href="/TeacherCourse">Course/Checking</a></li>
               <!--<li class="nav-item "><a class="nav-link" href="/check">Lab-Check </a></li>
               <li class="nav-item "><a class="nav-link" href="/checkQuiz">Quiz-Check </a></li>-->
